--- a/notebooks/object_detection/inference.ipynb
+++ b/notebooks/object_detection/inference.ipynb
@@ -320,7 +320,8 @@
    "id": "e7eaff93",
    "metadata": {},
    "source": [
-    "# Multiple videos"
+    "# Multiple videos\n",
+    "Modify model_type to v1, v2, v2_kd"
    ]
   },
   {
