modify output video path

--- a/notebooks/object_detection/inference.ipynb
+++ b/notebooks/object_detection/inference.ipynb
@@ -397,7 +397,7 @@
     "    width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
     "    height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "    \n",
-    "    output_video_path = output_video_dir/f\"{raw_video}_{model_type}\"\n",
+    "    output_video_path = output_video_dir/f\"{model_type}_{raw_video}\"\n",
     "    fourcc = cv2.VideoWriter_fourcc(*\"XVID\")\n",
     "    video_writer_out = cv2.VideoWriter(output_video_path, fourcc, fps, (width, height))\n",
     "    \n",
