add mobilenet backbone

--- a/notebooks/object_detection/inference.ipynb
+++ b/notebooks/object_detection/inference.ipynb
@@ -371,7 +371,19 @@
     "# replace the pre-trained head with a new one\n",
     "model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
     "model.load_state_dict(torch.load(model_path, weights_only=False,  map_location=torch.device('cpu')))\n",
-    "model.to(device).eval()"
+    "model.to(device).eval()\n",
+    "\n",
+    "\n",
+    "# ##### mobilenet_v3_large_fpn backbone #####\n",
+    "# print(f\"\\033[91m{model_path}\\033[0m\")\n",
+    "\n",
+    "# model = fasterrcnn_mobilenet_v3_large_fpn(weights=FasterRCNN_MobileNet_V3_Large_FPN_Weights.COCO_V1)\n",
+    "# # get number of input features for the classifier\n",
+    "# in_features = model.roi_heads.box_predictor.cls_score.in_features\n",
+    "# # replace the pre-trained head with a new one\n",
+    "# model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
+    "# model.load_state_dict(torch.load(model_path, weights_only=False,  map_location=torch.device('cpu')))\n",
+    "# model.to(device).eval()"
    ]
   },
   {
