--- a/notebooks/segmentation/image_collection/crops.ipynb
+++ b/notebooks/segmentation/image_collection/crops.ipynb
@@ -35,10 +35,11 @@
         "import gc\n",
         "import os\n",
         "import time\n",
+        "from concurrent.futures import ThreadPoolExecutor\n",
         "\n",
         "import cv2\n",
         "\n",
-        "gc.collect()\n"
+        "gc.collect()"
       ]
     },
     {
@@ -53,9 +54,11 @@
       },
       "outputs": [],
       "source": [
+        "MAX_PARALLEL_CAMERAS = 3\n",
+        "\n",
         "# Duration and interval settings\n",
         "DURATION_SECONDS = 3 * 60  # 3 minutes - run each cam for 3 min\n",
-        "INTERVAL_SECONDS = 5  # Save image every 5 seconds\n",
+        "INTERVAL_SECONDS = 1  # Save image every 5 seconds\n",
         "\n",
         "BASE_OUTPUT_DIR = \"Crops\""
       ]
@@ -135,17 +138,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "e506ad62",
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
-        },
-        "id": "e506ad62"
-      },
-      "outputs": [],
       "source": [
-        "def get_next_start_index(output_dir: str, cam_id: str) -> int:\n",
+        "def get_next_start_index(output_dir: str) -> int:\n",
         "    \"\"\"Return the next image index for a given camera folder.\"\"\"\n",
         "    if not os.path.exists(output_dir):\n",
         "        return 1\n",
@@ -163,24 +157,34 @@
         "        except ValueError:\n",
         "            continue\n",
         "\n",
-        "    return (max(numbers) + 1) if numbers else 1\n",
-        "\n",
-        "\n",
+        "    return (max(numbers) + 1) if numbers else 1"
+      ],
+      "metadata": {
+        "id": "x66WVPjsFVJt"
+      },
+      "id": "x66WVPjsFVJt",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def capture_from_camera(cam_id: str, hotspots: list[tuple[int, int, int, int]]) -> None:\n",
         "    \"\"\"Capture crops from a single camera for a fixed duration.\"\"\"\n",
-        "    print(f\"\\nStarting capture for camera {cam_id}\")\n",
+        "    print(f\"\\n[CAM {cam_id}] Starting capture\")\n",
         "\n",
-        "    camera_url = f\"rtsp://user:pwd@10.1.1.{cam_id}/axis-media/media.amp\"\n",
+        "    camera_url = f\"rtsp://username:password@10.1.1.{cam_id}/axis-media/media.amp\"\n",
         "    cap = cv2.VideoCapture(camera_url)\n",
         "\n",
         "    if not cap.isOpened():\n",
-        "        print(f\"Failed to connect to camera {cam_id}. Skipping...\")\n",
+        "        print(f\"[CAM {cam_id}] Failed to connect. Skipping...\")\n",
         "        return\n",
         "\n",
         "    output_dir = os.path.join(BASE_OUTPUT_DIR, cam_id)\n",
         "    os.makedirs(output_dir, exist_ok=True)\n",
         "\n",
-        "    image_index = get_next_start_index(output_dir, cam_id)\n",
+        "    # BUGFIX: only pass output_dir here\n",
+        "    image_index = get_next_start_index(output_dir)\n",
         "    start_time = time.time()\n",
         "    last_saved_time = start_time\n",
         "\n",
@@ -190,53 +194,74 @@
         "            current_time = time.time()\n",
         "\n",
         "            if not ret or frame is None:\n",
-        "                print(f\"Failed to grab frame from camera {cam_id}.\")\n",
+        "                print(f\"[CAM {cam_id}] Failed to grab frame.\")\n",
         "                break\n",
         "\n",
-        "            # Time to save crops\n",
+        "            # Time to save crops?\n",
         "            if current_time - last_saved_time >= INTERVAL_SECONDS:\n",
         "                for hotspot in hotspots:\n",
         "                    y1, y2, x1, x2 = hotspot\n",
         "                    crop = frame[y1:y2, x1:x2]\n",
         "\n",
-        "                    # Optional: basic sanity check to avoid empty crops\n",
+        "                    # Basic sanity check to avoid empty crops\n",
         "                    if crop.size == 0:\n",
         "                        print(\n",
-        "                            f\"Empty crop for cam {cam_id}, hotspot {hotspot}, skipping.\"\n",
+        "                            f\"[CAM {cam_id}] Empty crop, hotspot {hotspot}, skipping.\"\n",
         "                        )\n",
         "                        continue\n",
         "\n",
         "                    filename = os.path.join(output_dir, f\"{cam_id}_{image_index}.jpg\")\n",
         "                    success = cv2.imwrite(filename, crop)\n",
         "                    if not success:\n",
-        "                        print(f\"Failed to save image: {filename}\")\n",
+        "                        print(f\"[CAM {cam_id}] Failed to save image: {filename}\")\n",
         "                    image_index += 1\n",
         "\n",
         "                last_saved_time = current_time\n",
         "\n",
         "            # Stop after duration\n",
         "            if current_time - start_time >= DURATION_SECONDS:\n",
-        "                print(f\"Finished {DURATION_SECONDS} secs capture for camera {cam_id}\")\n",
+        "                print(f\"[CAM {cam_id}] Finished {DURATION_SECONDS} secs capture\")\n",
         "                break\n",
         "\n",
         "    finally:\n",
         "        cap.release()\n",
-        "        cv2.destroyAllWindows()\n",
-        "\n",
-        "\n",
-        "def main():\n",
-        "    # infinite looping over cameras.\n",
-        "    while True:\n",
+        "        # Optional: only needed if you open any windows\n",
+        "        # cv2.destroyAllWindows()"
+      ],
+      "metadata": {
+        "id": "lMec0gbAFVe_"
+      },
+      "id": "lMec0gbAFVe_",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e506ad62",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "e506ad62"
+      },
+      "outputs": [],
+      "source": [
+        "def run_all_cameras_once():\n",
+        "    \"\"\"Run all cameras with a thread pool, limiting parallel cameras.\"\"\"\n",
+        "    futures = []\n",
+        "    with ThreadPoolExecutor(max_workers=MAX_PARALLEL_CAMERAS) as executor:\n",
         "        for cam_id, hotspots in cam_dict.items():\n",
-        "            capture_from_camera(cam_id, hotspots)\n",
+        "            future = executor.submit(capture_from_camera, cam_id, hotspots)\n",
+        "            futures.append((cam_id, future))\n",
         "\n",
-        "        # sleep between full cycles to avoid hammering cameras\n",
-        "        time.sleep(2)\n",
-        "\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()\n",
-        "    print(\"All camera captures completed.\")\n"
+        "        # Optional: wait and log completion\n",
+        "        for cam_id, future in futures:\n",
+        "            try:\n",
+        "                future.result()\n",
+        "                print(f\"[CAM {cam_id}] Thread completed\")\n",
+        "            except Exception as e:\n",
+        "                print(f\"[CAM {cam_id}] Error in thread: {e}\")\n"
       ]
     },
     {
@@ -250,7 +275,22 @@
         "id": "ede79f34"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def main():\n",
+        "    # If you want infinite looping over cameras, keep while True.\n",
+        "    # Otherwise, remove the while True and just call run_all_cameras_once() once.\n",
+        "    while True:\n",
+        "        print(\"\\n=== Starting one capture round for all cameras ===\")\n",
+        "        run_all_cameras_once()\n",
+        "        print(\"=== Capture round complete. Sleeping before next round... ===\")\n",
+        "        # Optional: small sleep between full cycles\n",
+        "        time.sleep(2)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n",
+        "    print(\"All camera captures completed.\")"
+      ]
     },
     {
       "cell_type": "code",
