--- a/notebooks/segmentation/image_collection/crops.ipynb
+++ b/notebooks/segmentation/image_collection/crops.ipynb
@@ -17,7 +17,9 @@
         "id": "c4bceebd"
       },
       "source": [
-        "# Stream from camera and save crops of a frame"
+        "# Stream from camera and save crops of a frame\n",
+        "\n",
+        "Within each BASE_OUTPUT_DIR, new directories are created - one for each camera_id and saves images and keeps counter (additional images have max number + 1)"
       ]
     },
     {
