--- a/notebooks/segmentation/image_collection/x.ipynb
+++ b/notebooks/segmentation/image_collection/x.ipynb
@@ -1,1 +1,26 @@
-
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sandhyaparna/CV-Training/blob/main/notebooks/segmentation/image_collection/crops.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c4bceebd",
+      "metadata": {
+        "id": "c4bceebd"
+      },
+      "source": [
+        "# Stream from camera and save crops of a frame\n",
+        "\n",
+        "Within each BASE_OUTPUT_DIR, new directories are created - one for each camera_id and saves images and keeps counter (additional images have max number + 1)"
+      ]
+    },
+]
+}
