--- a/notebooks/segmentation/image_collection/x.ipynb
+++ b/notebooks/segmentation/image_collection/x.ipynb
@@ -22,5 +22,331 @@
         "Within each BASE_OUTPUT_DIR, new directories are created - one for each camera_id and saves images and keeps counter (additional images have max number + 1)"
       ]
     },
-]
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "62ad510b",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "62ad510b"
+      },
+      "outputs": [],
+      "source": [
+        "import gc\n",
+        "import os\n",
+        "import time\n",
+        "from concurrent.futures import ThreadPoolExecutor\n",
+        "\n",
+        "import cv2\n",
+        "\n",
+        "gc.collect()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "560eb8bc",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "560eb8bc"
+      },
+      "outputs": [],
+      "source": [
+        "MAX_PARALLEL_CAMERAS = 3\n",
+        "\n",
+        "# Duration and interval settings\n",
+        "DURATION_SECONDS = 3 * 60  # 3 minutes - run each cam for 3 min\n",
+        "INTERVAL_SECONDS = 1  # Save image every 5 seconds\n",
+        "\n",
+        "BASE_OUTPUT_DIR = \"Crops\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "701448a1",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "701448a1"
+      },
+      "outputs": [],
+      "source": [
+        "# Format: (y1, y2, x1, x2)\n",
+        "cam_dict = {\n",
+        "    \"176\": [\n",
+        "        (0, 700, 0, 1280),\n",
+        "        (0, 700, 640, 1920),\n",
+        "        (0, 700, 1280, 2560),\n",
+        "        (0, 700, 1920, 3200),\n",
+        "        (0, 700, 2560, 3840),\n",
+        "    ],\n",
+        "    \"177\": [\n",
+        "        (100, 930, 0, 1280),\n",
+        "        (100, 930, 640, 1920),\n",
+        "        (100, 930, 1280, 2560),\n",
+        "        (100, 930, 1920, 3200),\n",
+        "        (100, 930, 2560, 3840),\n",
+        "    ],\n",
+        "    \"178\": [\n",
+        "        (180, 930, 0, 1280),\n",
+        "        (180, 930, 640, 1920),\n",
+        "        (180, 930, 1280, 2560),\n",
+        "        (180, 930, 1920, 3200),\n",
+        "        (180, 930, 2560, 3840),\n",
+        "    ],\n",
+        "    \"179\": [\n",
+        "        (100, 850, 400, 1550),\n",
+        "        (100, 850, 975, 2125),\n",
+        "        (100, 850, 1280, 2560),\n",
+        "        (100, 850, 2125, 3275),\n",
+        "        (100, 850, 2560, 3840),\n",
+        "    ],\n",
+        "    \"180\": [\n",
+        "        (150, 900, 0, 1280),\n",
+        "        (150, 900, 640, 1920),\n",
+        "        (150, 900, 1280, 2560),\n",
+        "        (150, 900, 1920, 3200),\n",
+        "        (150, 900, 2560, 3840),\n",
+        "    ],\n",
+        "    \"181\": [\n",
+        "        (50, 750, 0, 1100),\n",
+        "        (50, 750, 500, 1600),\n",
+        "        (50, 750, 1100, 2560),\n",
+        "        (50, 750, 2125, 2200),\n",
+        "        (50, 750, 2200, 3300),\n",
+        "    ],\n",
+        "    \"182\": [\n",
+        "        (100, 900, 0, 1280),\n",
+        "        (100, 900, 640, 1920),\n",
+        "        (100, 900, 1280, 2560),\n",
+        "        (100, 900, 1920, 3200),\n",
+        "        (100, 900, 2560, 3840),\n",
+        "    ],\n",
+        "    \"184\": [\n",
+        "        (0, 800, 0, 1280),\n",
+        "        (0, 800, 640, 1920),\n",
+        "        (0, 800, 1280, 2560),\n",
+        "        (0, 800, 1920, 3200),\n",
+        "        (0, 800, 2560, 3840),\n",
+        "    ],\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_next_start_index(output_dir: str) -> int:\n",
+        "    \"\"\"Return the next image index for a given camera folder.\"\"\"\n",
+        "    if not os.path.exists(output_dir):\n",
+        "        return 1\n",
+        "\n",
+        "    existing_files = [f for f in os.listdir(output_dir) if f.endswith(\".jpg\")]\n",
+        "    numbers = []\n",
+        "    for f in existing_files:\n",
+        "        stem = os.path.splitext(f)[0]\n",
+        "        parts = stem.split(\"_\")\n",
+        "        if len(parts) < 2:\n",
+        "            continue\n",
+        "        try:\n",
+        "            num = int(parts[-1])\n",
+        "            numbers.append(num)\n",
+        "        except ValueError:\n",
+        "            continue\n",
+        "\n",
+        "    return (max(numbers) + 1) if numbers else 1"
+      ],
+      "metadata": {
+        "id": "x66WVPjsFVJt"
+      },
+      "id": "x66WVPjsFVJt",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def capture_from_camera(cam_id: str, hotspots: list[tuple[int, int, int, int]]) -> None:\n",
+        "    \"\"\"Capture crops from a single camera for a fixed duration.\"\"\"\n",
+        "    print(f\"\\n[CAM {cam_id}] Starting capture\")\n",
+        "\n",
+        "    camera_url = f\"rtsp://username:password@10.1.1.{cam_id}/axis-media/media.amp\"\n",
+        "    cap = cv2.VideoCapture(camera_url)\n",
+        "\n",
+        "    if not cap.isOpened():\n",
+        "        print(f\"[CAM {cam_id}] Failed to connect. Skipping...\")\n",
+        "        return\n",
+        "\n",
+        "    output_dir = os.path.join(BASE_OUTPUT_DIR, cam_id)\n",
+        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
+        "    # BUGFIX: only pass output_dir here\n",
+        "    image_index = get_next_start_index(output_dir)\n",
+        "    start_time = time.time()\n",
+        "    last_saved_time = start_time\n",
+        "\n",
+        "    try:\n",
+        "        while True:\n",
+        "            ret, frame = cap.read()\n",
+        "            current_time = time.time()\n",
+        "\n",
+        "            if not ret or frame is None:\n",
+        "                print(f\"[CAM {cam_id}] Failed to grab frame.\")\n",
+        "                break\n",
+        "\n",
+        "            # Time to save crops?\n",
+        "            if current_time - last_saved_time >= INTERVAL_SECONDS:\n",
+        "                for hotspot in hotspots:\n",
+        "                    y1, y2, x1, x2 = hotspot\n",
+        "                    crop = frame[y1:y2, x1:x2]\n",
+        "\n",
+        "                    # Basic sanity check to avoid empty crops\n",
+        "                    if crop.size == 0:\n",
+        "                        print(\n",
+        "                            f\"[CAM {cam_id}] Empty crop, hotspot {hotspot}, skipping.\"\n",
+        "                        )\n",
+        "                        continue\n",
+        "\n",
+        "                    filename = os.path.join(output_dir, f\"{cam_id}_{image_index}.jpg\")\n",
+        "                    success = cv2.imwrite(filename, crop)\n",
+        "                    if not success:\n",
+        "                        print(f\"[CAM {cam_id}] Failed to save image: {filename}\")\n",
+        "                    image_index += 1\n",
+        "\n",
+        "                last_saved_time = current_time\n",
+        "\n",
+        "            # Stop after duration\n",
+        "            if current_time - start_time >= DURATION_SECONDS:\n",
+        "                print(f\"[CAM {cam_id}] Finished {DURATION_SECONDS} secs capture\")\n",
+        "                break\n",
+        "\n",
+        "    finally:\n",
+        "        cap.release()\n",
+        "        # Optional: only needed if you open any windows\n",
+        "        # cv2.destroyAllWindows()"
+      ],
+      "metadata": {
+        "id": "lMec0gbAFVe_"
+      },
+      "id": "lMec0gbAFVe_",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e506ad62",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "e506ad62"
+      },
+      "outputs": [],
+      "source": [
+        "def run_all_cameras_once():\n",
+        "    \"\"\"Run all cameras with a thread pool, limiting parallel cameras.\"\"\"\n",
+        "    futures = []\n",
+        "    with ThreadPoolExecutor(max_workers=MAX_PARALLEL_CAMERAS) as executor:\n",
+        "        for cam_id, hotspots in cam_dict.items():\n",
+        "            future = executor.submit(capture_from_camera, cam_id, hotspots)\n",
+        "            futures.append((cam_id, future))\n",
+        "\n",
+        "        # Optional: wait and log completion\n",
+        "        for cam_id, future in futures:\n",
+        "            try:\n",
+        "                future.result()\n",
+        "                print(f\"[CAM {cam_id}] Thread completed\")\n",
+        "            except Exception as e:\n",
+        "                print(f\"[CAM {cam_id}] Error in thread: {e}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ede79f34",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "ede79f34"
+      },
+      "outputs": [],
+      "source": [
+        "def main():\n",
+        "    # If you want infinite looping over cameras, keep while True.\n",
+        "    # Otherwise, remove the while True and just call run_all_cameras_once() once.\n",
+        "    while True:\n",
+        "        print(\"\\n=== Starting one capture round for all cameras ===\")\n",
+        "        run_all_cameras_once()\n",
+        "        print(\"=== Capture round complete. Sleeping before next round... ===\")\n",
+        "        # Optional: small sleep between full cycles\n",
+        "        time.sleep(2)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n",
+        "    print(\"All camera captures completed.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f882bb92",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "f882bb92"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "37116274",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "37116274"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0f4be6f1",
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "0f4be6f1"
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
