--- a/notebooks/segmentation/image_collection/split_images_on_redness_score.ipynb
+++ b/notebooks/segmentation/image_collection/split_images_on_redness_score.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sandhyaparna/CV-Training/blob/main/notebooks/segmentation/image_collection/crops.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sandhyaparna/CV-Training/blob/main/notebooks/segmentation/image_collection/split_images_on_redness_score.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,9 +17,11 @@
         "id": "c4bceebd"
       },
       "source": [
-        "# Stream from camera and save crops of a frame\n",
+        "# Split images collected based on the redness score into different number of bins/folders\n",
         "\n",
-        "Within each BASE_OUTPUT_DIR, new directories are created - one for each camera_id and saves images and keeps counter (additional images have max number + 1)"
+        "* Redness score of each folder is calculated for all images in a folder\n",
+        "* Determine percentile threshold for the number of bins decided\n",
+        "* Images corresponding to their percentile score are moved into their respective folders\n"
       ]
     },
     {
@@ -34,14 +36,10 @@
       },
       "outputs": [],
       "source": [
-        "import gc\n",
-        "import os\n",
-        "import time\n",
-        "from concurrent.futures import ThreadPoolExecutor\n",
+        "import shutil\n",
         "\n",
         "import cv2\n",
-        "\n",
-        "gc.collect()"
+        "import numpy as np"
       ]
     },
     {
@@ -56,13 +54,17 @@
       },
       "outputs": [],
       "source": [
-        "MAX_PARALLEL_CAMERAS = 3\n",
+        "# --- Global Configuration ---\n",
+        "NUM_BINS = 15  # Number of percentile folders (bins)\n",
         "\n",
-        "# Duration and interval settings\n",
-        "DURATION_SECONDS = 3 * 60  # 3 minutes - run each cam for 3 min\n",
-        "INTERVAL_SECONDS = 1  # Save image every 5 seconds\n",
-        "\n",
-        "BASE_OUTPUT_DIR = \"Crops\""
+        "cam_ids_to_process = [\n",
+        "        176,\n",
+        "        177,\n",
+        "        178,\n",
+        "        179,\n",
+        "        180,\n",
+        "        184,\n",
+        "    ]  # 182 - Example list: replace with your actual IDs"
       ]
     },
     {
@@ -77,89 +79,123 @@
       },
       "outputs": [],
       "source": [
-        "# Format: (y1, y2, x1, x2)\n",
-        "cam_dict = {\n",
-        "    \"176\": [\n",
-        "        (0, 700, 0, 1280),\n",
-        "        (0, 700, 640, 1920),\n",
-        "        (0, 700, 1280, 2560),\n",
-        "        (0, 700, 1920, 3200),\n",
-        "        (0, 700, 2560, 3840),\n",
-        "    ],\n",
-        "    \"177\": [\n",
-        "        (100, 930, 0, 1280),\n",
-        "        (100, 930, 640, 1920),\n",
-        "        (100, 930, 1280, 2560),\n",
-        "        (100, 930, 1920, 3200),\n",
-        "        (100, 930, 2560, 3840),\n",
-        "    ],\n",
-        "    \"178\": [\n",
-        "        (180, 930, 0, 1280),\n",
-        "        (180, 930, 640, 1920),\n",
-        "        (180, 930, 1280, 2560),\n",
-        "        (180, 930, 1920, 3200),\n",
-        "        (180, 930, 2560, 3840),\n",
-        "    ],\n",
-        "    \"179\": [\n",
-        "        (100, 850, 400, 1550),\n",
-        "        (100, 850, 975, 2125),\n",
-        "        (100, 850, 1280, 2560),\n",
-        "        (100, 850, 2125, 3275),\n",
-        "        (100, 850, 2560, 3840),\n",
-        "    ],\n",
-        "    \"180\": [\n",
-        "        (150, 900, 0, 1280),\n",
-        "        (150, 900, 640, 1920),\n",
-        "        (150, 900, 1280, 2560),\n",
-        "        (150, 900, 1920, 3200),\n",
-        "        (150, 900, 2560, 3840),\n",
-        "    ],\n",
-        "    \"181\": [\n",
-        "        (50, 750, 0, 1100),\n",
-        "        (50, 750, 500, 1600),\n",
-        "        (50, 750, 1100, 2560),\n",
-        "        (50, 750, 2125, 2200),\n",
-        "        (50, 750, 2200, 3300),\n",
-        "    ],\n",
-        "    \"182\": [\n",
-        "        (100, 900, 0, 1280),\n",
-        "        (100, 900, 640, 1920),\n",
-        "        (100, 900, 1280, 2560),\n",
-        "        (100, 900, 1920, 3200),\n",
-        "        (100, 900, 2560, 3840),\n",
-        "    ],\n",
-        "    \"184\": [\n",
-        "        (0, 800, 0, 1280),\n",
-        "        (0, 800, 640, 1920),\n",
-        "        (0, 800, 1280, 2560),\n",
-        "        (0, 800, 1920, 3200),\n",
-        "        (0, 800, 2560, 3840),\n",
-        "    ],\n",
-        "}"
+        "def get_red_score(image_path):\n",
+        "    \"\"\"\n",
+        "    Calculates the percentage of red pixels in an image using HSV color space.\n",
+        "    \"\"\"\n",
+        "    img = cv2.imread(image_path)\n",
+        "\n",
+        "    if img is None:\n",
+        "        return 0.0\n",
+        "\n",
+        "    # Convert to HSV color space\n",
+        "    hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+        "\n",
+        "    # Define the two ranges for RED in HSV (0-10 and 160-179)\n",
+        "    lower_red_1 = np.array([0, 50, 50])\n",
+        "    upper_red_1 = np.array([10, 255, 255])\n",
+        "    mask1 = cv2.inRange(hsv, lower_red_1, upper_red_1)\n",
+        "\n",
+        "    lower_red_2 = np.array([160, 50, 50])\n",
+        "    upper_red_2 = np.array([179, 255, 255])\n",
+        "    mask2 = cv2.inRange(hsv, lower_red_2, upper_red_2)\n",
+        "\n",
+        "    # Combine the two masks\n",
+        "    final_mask = mask1 + mask2\n",
+        "\n",
+        "    total_pixels = img.shape[0] * img.shape[1]\n",
+        "    red_pixel_count = np.sum(final_mask > 0)\n",
+        "\n",
+        "    # Return percentage\n",
+        "    return (red_pixel_count / total_pixels) * 100\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def get_next_start_index(output_dir: str) -> int:\n",
-        "    \"\"\"Return the next image index for a given camera folder.\"\"\"\n",
-        "    if not os.path.exists(output_dir):\n",
-        "        return 1\n",
+        "def process_cam_id(cam_id):\n",
+        "    \"\"\"\n",
+        "    Scores, bins, and copies images for a single cam_id based on red pixel percentage.\n",
+        "    \"\"\"\n",
         "\n",
-        "    existing_files = [f for f in os.listdir(output_dir) if f.endswith(\".jpg\")]\n",
-        "    numbers = []\n",
-        "    for f in existing_files:\n",
-        "        stem = os.path.splitext(f)[0]\n",
-        "        parts = stem.split(\"_\")\n",
-        "        if len(parts) < 2:\n",
-        "            continue\n",
-        "        try:\n",
-        "            num = int(parts[-1])\n",
-        "            numbers.append(num)\n",
-        "        except ValueError:\n",
-        "            continue\n",
+        "    # --- Local Configuration ---\n",
+        "    # Define folder paths based on the current cam_id\n",
+        "    IMAGE_FOLDER = (\n",
+        "        f\"HighRiver_BoneCrops/{cam_id}\"  # Folder where original images are located\n",
+        "    )\n",
+        "    OUTPUT_FOLDER = (\n",
+        "        IMAGE_FOLDER + f\"/red_{cam_id}\"\n",
+        "    )  # Root folder for the output percentile folders\n",
         "\n",
-        "    return (max(numbers) + 1) if numbers else 1"
+        "    print(f\"\\n--- Starting processing for CAM ID: {cam_id} ---\")\n",
+        "\n",
+        "    red_scores = []\n",
+        "\n",
+        "    # 1. Score all images and store (score, filename)\n",
+        "    print(\"1. Calculating red scores for all images...\")\n",
+        "    if not os.path.exists(IMAGE_FOLDER):\n",
+        "        print(f\"⚠️ Error: Input folder '{IMAGE_FOLDER}' not found. Skipping.\")\n",
+        "        return\n",
+        "\n",
+        "    for filename in os.listdir(IMAGE_FOLDER):\n",
+        "        if filename.lower().endswith((\".png\", \".jpg\", \".jpeg\", \".bmp\")):\n",
+        "            full_path = os.path.join(IMAGE_FOLDER, filename)\n",
+        "            score = get_red_score(full_path)\n",
+        "            # Only include images with a score > 0 for percentile distribution\n",
+        "            if score > 0:\n",
+        "                red_scores.append((score, filename))\n",
+        "\n",
+        "    if not red_scores:\n",
+        "        print(\"No valid images found or no red color detected. Skipping.\")\n",
+        "        return\n",
+        "\n",
+        "    # 2. Determine percentile thresholds (Binning)\n",
+        "    scores_array = np.array([score for score, _ in red_scores])\n",
+        "\n",
+        "    print(f\"2. Determining percentile thresholds for {NUM_BINS} bins...\")\n",
+        "\n",
+        "    # Define the steps for percentiles (e.g., for 15 bins, 0, 6.67, 13.33, ..., 100)\n",
+        "    percentile_steps = np.linspace(0, 100, NUM_BINS + 1)\n",
+        "\n",
+        "    # Calculate the exact score at the 1st, 2nd, ..., 15th bin boundaries\n",
+        "    # Note: We skip the 0th percentile score\n",
+        "    thresholds = np.percentile(scores_array, percentile_steps[1:])\n",
+        "\n",
+        "    print(\"Calculated Score Thresholds (Cumulative):\")\n",
+        "    for i, threshold in enumerate(thresholds):\n",
+        "        print(f\"  Bin Max Score (Q{i + 1}): {threshold:.2f}%\")\n",
+        "    print(\"-\" * 40)\n",
+        "\n",
+        "    # 3. Create output directories\n",
+        "    os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
+        "    bin_names = [f\"{cam_id}_Q{i + 1}\" for i in range(NUM_BINS)]\n",
+        "    for name in bin_names:\n",
+        "        os.makedirs(os.path.join(OUTPUT_FOLDER, name), exist_ok=True)\n",
+        "\n",
+        "    # 4. Copy images to the correct percentile bin\n",
+        "    print(\"3. Copying images to percentile folders...\")\n",
+        "\n",
+        "    for score, filename in red_scores:\n",
+        "        source_path = os.path.join(IMAGE_FOLDER, filename)\n",
+        "\n",
+        "        # Determine the correct bin index (0 to NUM_BINS-1)\n",
+        "        # Find the first threshold that the score is less than or equal to\n",
+        "        bin_index = 0\n",
+        "        while bin_index < NUM_BINS and score > thresholds[bin_index]:\n",
+        "            bin_index += 1\n",
+        "\n",
+        "        # The logic ensures the score is placed in the lowest possible bin that meets the threshold.\n",
+        "        # If score > all thresholds, it should be placed in the highest bin (index NUM_BINS - 1)\n",
+        "        if bin_index >= NUM_BINS:\n",
+        "            bin_index = NUM_BINS - 1\n",
+        "\n",
+        "        target_folder_name = bin_names[bin_index]\n",
+        "        target_folder_path = os.path.join(OUTPUT_FOLDER, target_folder_name)\n",
+        "\n",
+        "        # Copy the file\n",
+        "        shutil.copy2(source_path, os.path.join(target_folder_path, filename))\n",
+        "\n",
+        "    print(f\"✅ Finished! Images copied to {NUM_BINS} folders inside '{OUTPUT_FOLDER}'.\")\n"
       ],
       "metadata": {
         "id": "x66WVPjsFVJt"
@@ -171,64 +207,21 @@
     {
       "cell_type": "code",
       "source": [
-        "def capture_from_camera(cam_id: str, hotspots: list[tuple[int, int, int, int]]) -> None:\n",
-        "    \"\"\"Capture crops from a single camera for a fixed duration.\"\"\"\n",
-        "    print(f\"\\n[CAM {cam_id}] Starting capture\")\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Define the list of camera IDs you want to process\n",
+        "    cam_ids_to_process = [\n",
+        "        176,\n",
+        "        177,\n",
+        "        178,\n",
+        "        179,\n",
+        "        180,\n",
+        "        184,\n",
+        "    ]  # 182 - Example list: replace with your actual IDs\n",
         "\n",
-        "    camera_url = f\"rtsp://username:password@10.1.1.{cam_id}/axis-media/media.amp\"\n",
-        "    cap = cv2.VideoCapture(camera_url)\n",
+        "    for current_cam_id in cam_ids_to_process:\n",
+        "        process_cam_id(current_cam_id)\n",
         "\n",
-        "    if not cap.isOpened():\n",
-        "        print(f\"[CAM {cam_id}] Failed to connect. Skipping...\")\n",
-        "        return\n",
-        "\n",
-        "    output_dir = os.path.join(BASE_OUTPUT_DIR, cam_id)\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # BUGFIX: only pass output_dir here\n",
-        "    image_index = get_next_start_index(output_dir)\n",
-        "    start_time = time.time()\n",
-        "    last_saved_time = start_time\n",
-        "\n",
-        "    try:\n",
-        "        while True:\n",
-        "            ret, frame = cap.read()\n",
-        "            current_time = time.time()\n",
-        "\n",
-        "            if not ret or frame is None:\n",
-        "                print(f\"[CAM {cam_id}] Failed to grab frame.\")\n",
-        "                break\n",
-        "\n",
-        "            # Time to save crops?\n",
-        "            if current_time - last_saved_time >= INTERVAL_SECONDS:\n",
-        "                for hotspot in hotspots:\n",
-        "                    y1, y2, x1, x2 = hotspot\n",
-        "                    crop = frame[y1:y2, x1:x2]\n",
-        "\n",
-        "                    # Basic sanity check to avoid empty crops\n",
-        "                    if crop.size == 0:\n",
-        "                        print(\n",
-        "                            f\"[CAM {cam_id}] Empty crop, hotspot {hotspot}, skipping.\"\n",
-        "                        )\n",
-        "                        continue\n",
-        "\n",
-        "                    filename = os.path.join(output_dir, f\"{cam_id}_{image_index}.jpg\")\n",
-        "                    success = cv2.imwrite(filename, crop)\n",
-        "                    if not success:\n",
-        "                        print(f\"[CAM {cam_id}] Failed to save image: {filename}\")\n",
-        "                    image_index += 1\n",
-        "\n",
-        "                last_saved_time = current_time\n",
-        "\n",
-        "            # Stop after duration\n",
-        "            if current_time - start_time >= DURATION_SECONDS:\n",
-        "                print(f\"[CAM {cam_id}] Finished {DURATION_SECONDS} secs capture\")\n",
-        "                break\n",
-        "\n",
-        "    finally:\n",
-        "        cap.release()\n",
-        "        # Optional: only needed if you open any windows\n",
-        "        # cv2.destroyAllWindows()"
+        "    print(\"\\n\\n*** All camera IDs processed. ***\")"
       ],
       "metadata": {
         "id": "lMec0gbAFVe_"
@@ -236,63 +229,6 @@
       "id": "lMec0gbAFVe_",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "e506ad62",
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
-        },
-        "id": "e506ad62"
-      },
-      "outputs": [],
-      "source": [
-        "def run_all_cameras_once():\n",
-        "    \"\"\"Run all cameras with a thread pool, limiting parallel cameras.\"\"\"\n",
-        "    futures = []\n",
-        "    with ThreadPoolExecutor(max_workers=MAX_PARALLEL_CAMERAS) as executor:\n",
-        "        for cam_id, hotspots in cam_dict.items():\n",
-        "            future = executor.submit(capture_from_camera, cam_id, hotspots)\n",
-        "            futures.append((cam_id, future))\n",
-        "\n",
-        "        # Optional: wait and log completion\n",
-        "        for cam_id, future in futures:\n",
-        "            try:\n",
-        "                future.result()\n",
-        "                print(f\"[CAM {cam_id}] Thread completed\")\n",
-        "            except Exception as e:\n",
-        "                print(f\"[CAM {cam_id}] Error in thread: {e}\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ede79f34",
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
-        },
-        "id": "ede79f34"
-      },
-      "outputs": [],
-      "source": [
-        "def main():\n",
-        "    # If you want infinite looping over cameras, keep while True.\n",
-        "    # Otherwise, remove the while True and just call run_all_cameras_once() once.\n",
-        "    while True:\n",
-        "        print(\"\\n=== Starting one capture round for all cameras ===\")\n",
-        "        run_all_cameras_once()\n",
-        "        print(\"=== Capture round complete. Sleeping before next round... ===\")\n",
-        "        # Optional: small sleep between full cycles\n",
-        "        time.sleep(2)\n",
-        "\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()\n",
-        "    print(\"All camera captures completed.\")"
-      ]
     },
     {
       "cell_type": "code",
