--- a/notebooks/segmentation/image_collection/split_images_on_redness_score.ipynb
+++ b/notebooks/segmentation/image_collection/split_images_on_redness_score.ipynb
@@ -134,7 +134,7 @@
         "    # 1. Score all images and store (score, filename)\n",
         "    print(\"1. Calculating red scores for all images...\")\n",
         "    if not os.path.exists(IMAGE_FOLDER):\n",
-        "        print(f\"⚠️ Error: Input folder '{IMAGE_FOLDER}' not found. Skipping.\")\n",
+        "        print(f\"Error: Input folder '{IMAGE_FOLDER}' not found. Skipping.\")\n",
         "        return\n",
         "\n",
         "    for filename in os.listdir(IMAGE_FOLDER):\n",
@@ -241,7 +241,30 @@
         "id": "f882bb92"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# --- Starting processing for CAM ID: 176 ---\n",
+        "# 1. Calculating red scores for all images...\n",
+        "# 2. Determining percentile thresholds for 15 bins...\n",
+        "# Calculated Score Thresholds (Cumulative):\n",
+        "#   Bin Max Score (Q1): 0.00%\n",
+        "#   Bin Max Score (Q2): 0.00%\n",
+        "#   Bin Max Score (Q3): 0.01%\n",
+        "#   Bin Max Score (Q4): 0.01%\n",
+        "#   Bin Max Score (Q5): 0.02%\n",
+        "#   Bin Max Score (Q6): 0.03%\n",
+        "#   Bin Max Score (Q7): 0.05%\n",
+        "#   Bin Max Score (Q8): 0.10%\n",
+        "#   Bin Max Score (Q9): 0.18%\n",
+        "#   Bin Max Score (Q10): 0.27%\n",
+        "#   Bin Max Score (Q11): 0.52%\n",
+        "#   Bin Max Score (Q12): 1.07%\n",
+        "#   Bin Max Score (Q13): 2.44%\n",
+        "#   Bin Max Score (Q14): 9.65%\n",
+        "#   Bin Max Score (Q15): 41.83%\n",
+        "# ----------------------------------------\n",
+        "# 3. Copying images to percentile folders...\n",
+        "# Finished! Images copied to 15 folders inside 'Crops/176/red_176'."
+      ]
     },
     {
       "cell_type": "code",
