--- a/notebooks/OCR/02_click_based_ocr_detection.ipynb
+++ b/notebooks/OCR/02_click_based_ocr_detection.ipynb
@@ -90,10 +90,10 @@
     {
       "cell_type": "code",
       "source": [
-        "micro_ingredient_images = \"/Users/sandy/Desktop/GitHub/label_ocr/science/data/micro_ingredients\"\n",
+        "micro_ingredient_images = \"/data/ingredients\"\n",
         "\n",
-        "img_name = \"Media (35).jpeg\" # \"Nutritek _8.jpeg\" # \"Beef TM _12.jpeg\"  # # \"Availa 4_1.jpeg\" # \"Bovatec_2.jpeg\"\n",
-        "img_path = f\"/Users/sandy/Desktop/GitHub/label_ocr/science/data/micro_ingredients/{img_name}\"\n",
+        "img_name = \"Media (35).jpeg\"\n",
+        "img_path = f\"/data/ingredients/{img_name}\"\n",
         "\n",
         "image = Image.open(img_path)\n",
         "# image = image.rotate(270, expand=True)\n",
