--- a/notebooks/classification/multi_label_image_collection/1.collect_crops.ipynb
+++ b/notebooks/classification/multi_label_image_collection/1.collect_crops.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sandhyaparna/CV-Training/blob/main/notebooks/segmentation/image_collection/crops.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,10 +27,10 @@
       "execution_count": null,
       "id": "62ad510b",
       "metadata": {
+        "id": "62ad510b",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "62ad510b"
+        }
       },
       "outputs": [],
       "source": [
@@ -49,10 +49,10 @@
       "execution_count": null,
       "id": "560eb8bc",
       "metadata": {
+        "id": "560eb8bc",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "560eb8bc"
+        }
       },
       "outputs": [],
       "source": [
@@ -70,10 +70,10 @@
       "execution_count": null,
       "id": "701448a1",
       "metadata": {
+        "id": "701448a1",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "701448a1"
+        }
       },
       "outputs": [],
       "source": [
@@ -93,13 +93,13 @@
         "        (100, 930, 1920, 3200),\n",
         "        (100, 930, 2560, 3840),\n",
         "    ],\n",
-        "    \"178\": [\n",
-        "        (180, 930, 0, 1280),\n",
-        "        (180, 930, 640, 1920),\n",
-        "        (180, 930, 1280, 2560),\n",
-        "        (180, 930, 1920, 3200),\n",
-        "        (180, 930, 2560, 3840),\n",
-        "    ],\n",
+        "    # \"178\": [\n",
+        "    #     (180, 930, 0, 1280),\n",
+        "    #     (180, 930, 640, 1920),\n",
+        "    #     (180, 930, 1280, 2560),\n",
+        "    #     (180, 930, 1920, 3200),\n",
+        "    #     (180, 930, 2560, 3840),\n",
+        "    # ],\n",
         "    \"179\": [\n",
         "        (100, 850, 400, 1550),\n",
         "        (100, 850, 975, 2125),\n",
@@ -107,39 +107,45 @@
         "        (100, 850, 2125, 3275),\n",
         "        (100, 850, 2560, 3840),\n",
         "    ],\n",
-        "    \"180\": [\n",
-        "        (150, 900, 0, 1280),\n",
-        "        (150, 900, 640, 1920),\n",
-        "        (150, 900, 1280, 2560),\n",
-        "        (150, 900, 1920, 3200),\n",
-        "        (150, 900, 2560, 3840),\n",
-        "    ],\n",
-        "    \"181\": [\n",
-        "        (50, 750, 0, 1100),\n",
-        "        (50, 750, 500, 1600),\n",
-        "        (50, 750, 1100, 2560),\n",
-        "        (50, 750, 2125, 2200),\n",
-        "        (50, 750, 2200, 3300),\n",
-        "    ],\n",
-        "    \"182\": [\n",
-        "        (100, 900, 0, 1280),\n",
-        "        (100, 900, 640, 1920),\n",
-        "        (100, 900, 1280, 2560),\n",
-        "        (100, 900, 1920, 3200),\n",
-        "        (100, 900, 2560, 3840),\n",
-        "    ],\n",
-        "    \"184\": [\n",
-        "        (0, 800, 0, 1280),\n",
-        "        (0, 800, 640, 1920),\n",
-        "        (0, 800, 1280, 2560),\n",
-        "        (0, 800, 1920, 3200),\n",
-        "        (0, 800, 2560, 3840),\n",
-        "    ],\n",
+        "    # \"180\": [\n",
+        "    #     (150, 900, 0, 1280),\n",
+        "    #     (150, 900, 640, 1920),\n",
+        "    #     (150, 900, 1280, 2560),\n",
+        "    #     (150, 900, 1920, 3200),\n",
+        "    #     (150, 900, 2560, 3840),\n",
+        "    # ],\n",
+        "    # \"181\": [\n",
+        "    #     (50, 750, 0, 1100),\n",
+        "    #     (50, 750, 500, 1600),\n",
+        "    #     (50, 750, 1100, 2560),\n",
+        "    #     (50, 750, 2125, 2200),\n",
+        "    #     (50, 750, 2200, 3300),\n",
+        "    # ],\n",
+        "    # \"182\": [\n",
+        "    #     (100, 900, 0, 1280),\n",
+        "    #     (100, 900, 640, 1920),\n",
+        "    #     (100, 900, 1280, 2560),\n",
+        "    #     (100, 900, 1920, 3200),\n",
+        "    #     (100, 900, 2560, 3840),\n",
+        "    # ],\n",
+        "    # \"184\": [\n",
+        "    #     (0, 800, 0, 1280),\n",
+        "    #     (0, 800, 640, 1920),\n",
+        "    #     (0, 800, 1280, 2560),\n",
+        "    #     (0, 800, 1920, 3200),\n",
+        "    #     (0, 800, 2560, 3840),\n",
+        "    # ],\n",
         "}"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "x66WVPjsFVJt",
+      "metadata": {
+        "id": "x66WVPjsFVJt"
+      },
+      "outputs": [],
       "source": [
         "def get_next_start_index(output_dir: str) -> int:\n",
         "    \"\"\"Return the next image index for a given camera folder.\"\"\"\n",
@@ -160,16 +166,16 @@
         "            continue\n",
         "\n",
         "    return (max(numbers) + 1) if numbers else 1"
-      ],
-      "metadata": {
-        "id": "x66WVPjsFVJt"
-      },
-      "id": "x66WVPjsFVJt",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "lMec0gbAFVe_",
+      "metadata": {
+        "id": "lMec0gbAFVe_"
+      },
+      "outputs": [],
       "source": [
         "def capture_from_camera(cam_id: str, hotspots: list[tuple[int, int, int, int]]) -> None:\n",
         "    \"\"\"Capture crops from a single camera for a fixed duration.\"\"\"\n",
@@ -229,23 +235,17 @@
         "        cap.release()\n",
         "        # Optional: only needed if you open any windows\n",
         "        # cv2.destroyAllWindows()"
-      ],
-      "metadata": {
-        "id": "lMec0gbAFVe_"
-      },
-      "id": "lMec0gbAFVe_",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "e506ad62",
       "metadata": {
+        "id": "e506ad62",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "e506ad62"
+        }
       },
       "outputs": [],
       "source": [
@@ -271,10 +271,10 @@
       "execution_count": null,
       "id": "ede79f34",
       "metadata": {
+        "id": "ede79f34",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "ede79f34"
+        }
       },
       "outputs": [],
       "source": [
@@ -299,10 +299,10 @@
       "execution_count": null,
       "id": "f882bb92",
       "metadata": {
+        "id": "f882bb92",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "f882bb92"
+        }
       },
       "outputs": [],
       "source": []
@@ -312,10 +312,10 @@
       "execution_count": null,
       "id": "37116274",
       "metadata": {
+        "id": "37116274",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "37116274"
+        }
       },
       "outputs": [],
       "source": []
@@ -325,26 +325,26 @@
       "execution_count": null,
       "id": "0f4be6f1",
       "metadata": {
+        "id": "0f4be6f1",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "0f4be6f1"
+        }
       },
       "outputs": [],
       "source": []
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
     }
   },
   "nbformat": 4,
