update annotation file

--- a/notebooks/object_detection/1. annotation.ipynb
+++ b/notebooks/object_detection/1. annotation.ipynb
@@ -72,6 +72,7 @@
     "    combine_coco_files,\n",
     "    combine_two_coco_files,\n",
     "    remap_coco_annotations,\n",
+    "    fix_and_export_coco_data\n",
     ")"
    ]
   },
@@ -88,9 +89,17 @@
    "source": [
     "coco_data_v1 = remap_coco_annotations(Path(\"../data/annotations/v1.json\"), selected_labels=[0])\n",
     "coco_data_v2 = remap_coco_annotations(Path(\"../data/annotations/v2.json\"), selected_labels=[0])\n",
-    "combined_coco_path = '../data/annotations/v1_v2.json'\n",
     "\n",
-    "combined_coco = combine_coco_files([coco_data_v1, coco_data_v2])"
+    "combined_coco = combine_coco_files([coco_data_v1, coco_data_v2])\n",
+    "\n",
+    "# when exporting coco file from label-studio, filename is modified a little bit.\n",
+    "# so rename the filenames in the coco file to actual image names\n",
+    "# Export the final coco file with the modified file names\n",
+    "combined_coco_path = '../data/annotations/v1_v2.json'\n",
+    "combined_coco = fix_and_export_coco_data(\n",
+    "    combined_coco,\n",
+    "    output_path=combined_coco_path\n",
+    ")"
    ]
   },
   {
@@ -104,24 +113,27 @@
    },
    "outputs": [],
    "source": [
-    "# when exporting coco file from label-studio, filename is modified a little bit.\n",
-    "# so rename the filenames in the coco file to actual image names\n",
-    "# Export the final coco file with the modified file names\n",
+    "# # when exporting coco file from label-studio, filename is modified a little bit.\n",
+    "# # so rename the filenames in the coco file to actual image names\n",
+    "# # Export the final coco file with the modified file names\n",
+    "#\n",
+    "# def extract_text_after_first_dash(s):\n",
+    "#     # Split the string at the first dash\n",
+    "#     parts = s.split('-', 1)\n",
+    "#     # Return the part after the first dash\n",
+    "#     return parts[1] if len(parts) > 1 else ''\n",
+    "#\n",
+    "# def modify_file_names(images):\n",
+    "#     for image in images:\n",
+    "#         if 'file_name' in image:\n",
+    "#             original_file_name = image['file_name']\n",
+    "#             modified_file_name = extract_text_after_first_dash(original_file_name)\n",
+    "#             image['file_name'] = modified_file_name\n",
+    "#\n",
+    "# modify_file_names(combined_coco[\"images\"])\n",
     "\n",
-    "def extract_text_after_first_dash(s):\n",
-    "    # Split the string at the first dash\n",
-    "    parts = s.split('-', 1)\n",
-    "    # Return the part after the first dash\n",
-    "    return parts[1] if len(parts) > 1 else ''\n",
-    "\n",
-    "def modify_file_names(images):\n",
-    "    for image in images:\n",
-    "        if 'file_name' in image:\n",
-    "            original_file_name = image['file_name']\n",
-    "            modified_file_name = extract_text_after_first_dash(original_file_name)\n",
-    "            image['file_name'] = modified_file_name\n",
-    "\n",
-    "modify_file_names(combined_coco[\"images\"])"
+    "# with open(combined_coco_path, \"w\") as f:\n",
+    "#     json.dump(combined_coco, f)"
    ]
   },
   {
@@ -135,9 +147,6 @@
    },
    "outputs": [],
    "source": [
-    "with open(combined_coco_path, \"w\") as f:\n",
-    "    json.dump(combined_coco, f)\n",
-    "\n",
     "len(combined_coco['images']), len(combined_coco['annotations'])"
    ]
   },
